# todo-api

./: Cargo.toml  README.md  Rocket.toml  package-lock.json  package.json
.github/workflows/: rust.yml
src/: App.css  App.jsx  main.rs
src/components/: EditHandle.jsx
src/handlers/: Handle.jsx  mod.rs  todo.rs  ui.rs
static/style/: style.css
views/: index.html.tera
